--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -993,10 +993,8 @@ massa et mattis lacinia.
 \setcctype{by}
 \copyrightyear{2022}
 \acmYear{May 2022}
-\acmBooktitle{EngageCSEdu}
+\acmBooktitle{ACM EngageCSEdu}
 \acmDOI{XXXXXXX.XXXXXXX}
-%% Normally we suppress ISBN for course materials
-\acmISBN{}
 
 \begin{document}
 \title{Introduction to Data, Functions, and Mathematical
