New sample for acmengage

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1058,6 +1058,13 @@
 %  \url{https://creativecommons.org/licenses/} for the explanation).
 %  This command should be used in the preamble only.
 %
+%  Material published under Creative Commons license should include
+%  the corresponding icon.  A modern \TeX\ distribution includes these
+%  icons in the package \textsl{doclicense}. In case your distribution
+%  does not have them, ACM provides a file \path{ccicons.zip} with
+%  these icons.  Just unzip it in the same directory where your
+%  document is.
+%
 % The ACM submission software should generate the right command for you
 % to paste into your file.
 %
