--- a/samples/sample-base.bib
+++ b/samples/sample-base.bib
@@ -1508,10 +1508,18 @@ pages = "24--31"}
 
 @online{CTANacmart,
   author =    {Boris Veytsman},
-  title =  {acmart---{C}lass for typesetting publications of {ACM}},
+  title =  {acmart---{Class} for typesetting publications of {ACM}},
   year = 2017,
   url =    {http://www.ctan.org/pkg/acmart},
   lastaccessed = {May 27, 2017}
+  }
+
+@online{doclicense,
+  author =    {Robin Schneider},
+  title =  {The \textsl{doclicense} package},
+  year = 2022,
+  url =    {http://www.ctan.org/pkg/doclicense},
+  lastaccessed = {May 27, 2022}
   }
 
 @ARTICLE{bowman:reasoning,
