--- a/README
+++ b/README
@@ -13,6 +13,7 @@ The production version is the one on CTAN and ACM sites.
 Changes
 
 Version 1.86.  Empty country in affiliation now produces an error
+               Bug fixes
 
 Version 1.85.  Bug fixes
 	       Added support for Creative Commons licenses (requires
