--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -1091,10 +1091,16 @@ This section is included in the template to explain the choices for the meta-dat
 Current courses are:
 
 \begin{itemize}
-    \item CS0 -- a breadth first introductory computing course similar to Exploring Computer Science or AP CS Principles
-    \item CS1 -- an introductory programming course covering topics normally associated with an imperative or functional programming course. Similar to an AP CS A course
-    \item Data Structures -- a follow-on course occurring after CS1 that introduces linear and non-linear data structures including implementation and usage
-    \item Discrete Math -- a course covering discrete mathematical structures such as integers, graphs and logic statements. This may include logic, set theory, combinatorics, graphy theory, number theory, topology, etc.
+    \item CS0---a breadth first introductory computing course similar to Exploring Computer Science or AP CS Principles
+    \item CS1---an introductory programming course covering topics normally associated with an imperative or functional programming course. Similar to an AP CS A course
+    \item Data Structures---a follow-on course occurring after CS1 that introduces linear and non-linear data structures including implementation and usage
+    \item Discrete Math---a course covering discrete mathematical
+      structures such as integers, graphs and logic statements. This
+      may include logic, set theory, combinatorics, graphy theory,
+      number theory, topology, etc.
+    \item HCI---a course in the general area of human computer
+      interaction. This might be a general HCI course or a course in a
+      specific subdiscipline such as user-centred design.
 \end{itemize}
 
 More than one course may be selected. If you are submitting an OER for a special topics issue of Engage, please discuss the appropriate course choice with the guest editors of the special issue.
@@ -1121,12 +1127,12 @@ Authors may select all that apply from the following list:
 One resource type must be selected. Current list to select from includes:
 
 \begin{itemize}
-    \item Assignment -- the most common OER type. Typically represents a task assigned to individual or groups of students that will be completed outside of class time.
-    \item Lecture slides -- an annotated set of presentation slides to introduce or explain a topic, typically a cutting-edge research topic, to a more lay audience. An example might be explaining a specific cryptography algorithm, blockchain, or an AI / ML solution to a problem.
-    \item Lab -- this represents a task assigned to an individual or group of students to be completed under supervision, usually during a closed-lab model
-    \item Project -- an assignment that is of a longer duration, perhaps multiple weeks to an entire term
-    \item Tutorial -- a task usually completed by an individual to learn some material on their own
-    \item Other -- any other type of OER that does not fit into one of the above categories
+    \item Assignment---the most common OER type. Typically represents a task assigned to individual or groups of students that will be completed outside of class time.
+    \item Lecture slides---an annotated set of presentation slides to introduce or explain a topic, typically a cutting-edge research topic, to a more lay audience. An example might be explaining a specific cryptography algorithm, blockchain, or an AI / ML solution to a problem.
+    \item Lab---this represents a task assigned to an individual or group of students to be completed under supervision, usually during a closed-lab model
+    \item Project---an assignment that is of a longer duration, perhaps multiple weeks to an entire term
+    \item Tutorial---a task usually completed by an individual to learn some material on their own
+    \item Other---any other type of OER that does not fit into one of the above categories
 \end{itemize}
 
 \subsection{CS Concepts}
@@ -1136,11 +1142,11 @@ This is selectable from the ontology of topics found at \url{https://www.engage-
 Authors will select the most appropriate one from the following list:
 
 \begin{itemize}
-    \item Programming Concepts -- anything involving programming
-    \item Data Structures -- anything involving data structures
-    \item Software Development Methods -- if the OER centers around software development (i.e., requirements gathering, testing, maintenance, code reviews) rather than the actual programming content
-    \item Discrete Math -- anything involving discrete math
-    \item N/A -- not applicable
+    \item Programming Concepts---anything involving programming
+    \item Data Structures---anything involving data structures
+    \item Software Development Methods---if the OER centers around software development (i.e., requirements gathering, testing, maintenance, code reviews) rather than the actual programming content
+    \item Discrete Math---anything involving discrete math
+    \item N/A---not applicable
 \end{itemize}
 
 \subsection{Creative Commons License}
